Styles/home.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color: #f1f1f1;
}

body {
    max-height: 100vh;
    background: url('../assets/images/home/background-home-desktop.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.nav-container {
    width: 95%;
    margin: 51px auto 0 5%;
    display: flex;
    justify-content: space-between;
}

.nav-logo {
    cursor: pointer;
}

.navbar {
    width: 60%;
    display: flex;
    color: #f1f1f1;
    background-color: rgba(255,255,255,0.08);
    justify-content: center;
    align-items: center;
}

.item-container {
    display: flex;
    padding: 1rem 0;
}

.item-container:hover {
    border-bottom: 3px solid #fff;
    cursor: pointer;
}

.numbers-bold {
    color: #fff;
    font-weight: bold;
    padding-right: .5rem;
}

.nav-item {
    padding-right: 2.9rem;
}

.info-container {
    width: 78%;
    margin: 18% auto 0 auto;
    display: flex;
    justify-content: space-between;
}

.left-info-box {
    max-width: 44.5%;
}

.space-title {
    margin: 1.5rem 0 1.5rem 10px;
    font-size: 8.5rem;
}

.home-paragraph {
    font-size: 20px;
}

.right-info-box {
    width: 23%;
    height: 23%;
    margin: 7.3125rem 0 0 0;
}

.right-explorer-circle {
    background-color: #fff;
    border: 1px solid #fff;
    border-radius: 50%;
    text-align: center;
    margin: auto;
}

.explore {
    color: #000;
    padding: 46% 11%;
}

